--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
       href="./assets/image/favicon.ico"
     />
     <title>Fluent Tetris</title>
-    <link rel="stylesheet" href="./assets/style/main.css" />
     <link rel="stylesheet" href="./assets/style/var.css" />
+    <link rel="stylesheet" href="./assets/style/main.css" />
   </head>
   <body>
     <main>
@@ -44,7 +44,7 @@
         </div>
       </div>
     </main>
-    <script src="./assets/script/init.js"></script>
-    <script src="./assets/script/var.js"></script>
+    <script src="./assets/script/ftMain.js"></script>
+    <script>ft();</script>
   </body>
 </html>
