--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         </div>
       </div>
     </main>
+    <div id="cover">按任意键以开始</div>
     <!-- Libraries -->
     <script src="./assets/script/ftMain.js"></script>
     <script src="./assets/script/ftMgr.js"></script>
