fix infinative hold

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     <script src="./assets/script/ftMgr.js"></script>
     <script src="./assets/script/ftRender.js"></script>
     <script src="./assets/script/ftVar.js"></script>
+    <script src="./assets/script/ftCtrl.js"></script>
     <!-- Instances -->
     <script>
       ft.render.initobj();
