control system & level system

--- a/index.html
+++ b/index.html
@@ -56,11 +56,12 @@
       ft.render.initobj();
       document.getElementById('p1').main = new ft.main(1);
       // document.getElementById('p2').main = new ft.main(2);
+      ft.ctrl.bind();
       ft.copyright();
+
     </script>
-    <!-- Debug -->
+    <!-- Debug -/->
     <script src="./assets/script/ftTool.js"></script>
-    <script>window.ftTool.addkbdEvent()</script>
     <!---->
   </body>
 </html>
